Fix scroll bar not showing up

--- a/tooi/app.css
+++ b/tooi/app.css
@@ -1,7 +1,3 @@
-ListView {
-    height: auto;
-}
-
 ListView > ListItem {
     background: transparent;
 }
